@@ -69,8 +69,8 @@
 		</area>
 	</colorbuttons>
 
-	<timers>	
-		<area  condition="not{numtimerconflicts}++{09_showtimers}" x="61%" y="73%" width="12%" height="6%" layer="3">
+	<timers condition="{09_showonlytimers}||{10_showtimersandinfos}" detached="true" delay="100" fadetime="500" >
+		<area  condition="not{numtimerconflicts}" x="61%" y="73%" width="12%" height="6%" layer="3">
 			<drawtext condition="gt({numtimers}, 1)" x="5%" y="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numtimers} {tr(activetimers)}" />
 			<drawtext condition="eq({numtimers}, 1)" x="5%" y="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numtimers} {tr(activetimer)}" /> 
 		</area>
@@ -78,12 +78,12 @@
 			<drawtext condition="eq({numtimerconflicts}, 1)" x="5%" y="0" valign="center" font="{light}" fontsize="60%" color="{clrRed}" text="{numtimerconflicts} {tr(conflict)}!" />           
 			<drawtext condition="gt({numtimerconflicts}, 1)" x="5%" y="0" valign="center" font="{light}" fontsize="60%" color="{clrRed}" text="{numtimerconflicts} {tr(conflicts)}!" />
 		</area>
-		<area condition="{09_showtimers}" x="1%" y="80%" width="85%" height="18%" layer="3">
+		<area  condition="{09_showonlytimers}++not{10_showtimersandinfos}" x="1%" y="80%" width="85%" height="18%" layer="3">
 			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/8" rowheight="{areaheight}" overflow="cut">
 				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsTimerMain" />
 			</loop>
 		</area>             
-		<area condition="{09_showtimers}" x="1%" y="80%" width="95%" height="18%" layer="3">
+		<area condition="{09_showonlytimers}++not{10_showtimersandinfos}" x="1%" y="80%" width="95%" height="18%" layer="3">
 			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/9*1.005" rowheight="{areaheight}" overflow="cut">
 				<drawimage  cache="true" name="logo" y="{areaheight}*0.11" width="5%" height="15%" align="center" imagetype="channellogo" path="{timers[channelid]}" />
 				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
@@ -91,12 +91,25 @@
 				<drawtext condition="{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
 			</loop>
 		</area>
-		<area condition="{09_showtimers}++gt({numtimers}, 8)" x="86%" y="80%" width="12%" height="18%" layer="3">
+		<area condition="{09_showonlytimers}++gt({numtimers}, 8)++not{10_showtimersandinfos}" x="86%" y="80%" width="12%" height="18%" layer="3">
 			<drawimage x="0" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="shadowsTimerMainLast" />
-		</area>	       
+		</area>
+		<area  condition="{10_showtimersandinfos}++not{09_showonlytimers}" x="1%" y="80%" width="78%" height="18%" layer="3">
+			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/7" rowheight="{areaheight}" overflow="cut">
+				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsTimerMain" />
+			</loop>
+		</area>
+		<area condition="{10_showtimersandinfos}++not{09_showonlytimers}" x="1%" y="80%" width="78%" height="18%" layer="3">
+			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/7*1.005" rowheight="{areaheight}" overflow="cut">
+				<drawimage  cache="true" name="logo" y="{areaheight}*0.11" width="5%" height="15%" align="center" imagetype="channellogo" path="{timers[channelid]}" />
+				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
+				<drawtext condition="not{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[datetime]}"/>
+				<drawtext condition="{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
+			</loop>
+		</area>    
 	</timers>
 
-	<discusage>
+	<discusage detached="true" delay="150" fadetime="500">
 		<area x="75%" y="73%" width="18%" height="6%" layer="3">
 			<drawtext x="0" y="0" align="right" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{vdrusagestring}" />
 		</area>
@@ -105,17 +118,33 @@
 	<devices> 
 	</devices>
 
-	<currentweather>
+	<currentweather condition="{10_showtimersandinfos}++not{09_showonlytimers}" detached="true" delay="200" fadetime="500" >
+		<area x="81%" y="92%" width="7%" height="6%" layer="3">
+			<drawimage name="weathericon" x="0" valign="center" width="{areaheight}*0.8" height="{areaheight}*0.8" imagetype="icon" path="{icon}" />
+			<drawtext name="temperature" x="0" align="right" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{temperature}°C" />
+		</area>
+	    <area x="88%" y="92%" width="7%" height="5%" layer="3">
+			<drawtext  x="0" y="15%" align="right" valign="top" font="{light}" fontsize="50%" color="{clrLightGray}" text="min: {mintemperature}°C" />
+			<drawtext  x="0" align="right" valign="bottom" font="{light}" fontsize="50%" color="{clrLightGray}" text="max: {maxtemperature}°C" />
+		</area>
 	</currentweather>
 
-	<systemload>
+	<systemload condition="{10_showtimersandinfos}++not{09_showonlytimers}" detached="true" delay="200" fadetime="500" >
+		<area x="79%" y="80%" width="21%" height="20%" layer="3">
+			<drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsInfoMainLast" />
+		</area>
+		<area x="81%" y="86%" width="14%" height="6%" layer="3">
+			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="System Load: {load}" />
+		</area>
 	</systemload>
 	
-	<temperatures>      
+	<temperatures condition="{10_showtimersandinfos}++not{09_showonlytimers}" detached="true" delay="200" fadetime="500" >   
+		<area  x="81%" y="80%" width="14%" height="6%" layer="3">		
+			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="CPU: {cputemp}°C   GPU: {gputemp}°C"/>
+		</area>
 	</temperatures>
 
 	<menuitems x="0" y="20%" orientation="vertical" width="100%" height="50%" align="center" numlistelements="{01_numshortmenuitems}">
-		
 		<listelement>
 			<area x="57%" width="38%" layer="3">
 				<drawimage  condition="not{current}" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuTVG" />
@@ -131,7 +160,6 @@
 				<drawtext condition="not{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{label}" />                
 			</areascroll>
 		</listelement>
-
 	</menuitems>
 
 	<scrollbar>
