@@ -23,7 +23,7 @@
 		</area>
 	</header>
 
-	<menuitems x="0" y="20%" orientation="vertical" width="100%" height="72%" align="center" numlistelements="15">
+	<menuitems x="0" y="20%" orientation="vertical" width="100%" height="80%" align="center" numlistelements="16">
 		<listelement>
 			<!-- Background -->
 			<area x="57%" width="38%" layer="3">
@@ -36,20 +36,22 @@
 				<drawtext x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{menuitemtext}" />
 			</area>
 		</listelement>
+		<currentelement delay="100" fadetime="500" >
 
-		<currentelement delay="0">
-			<area x="0" y="22%" width="94%" height="88%" layer="3">
-				<drawtext condition="{iscurrent}" x="62%" y="2%" font="{light}" fontsize="6%" color="{clrLightGray}" text="{city}" /> <drawtext condition="{iscurrent}" x="62%" y="8%" font="{light}" fontsize="4%" color="{clrLightGray}" text="{timestamp}" />
-				<drawtext condition="{iscurrent}" x="62%" y="46%" font="{light}" fontsize="6%" color="{clrLightGray}" text="{summary}" />
-				<drawtext condition="{ishourly}||{isdaily}" x="0" y="60%" align="center" font="{light}" fontsize="6%" color="{clrLightGray}" text="{summary}" />
-				<drawtext condition="{iscurrent}" name="temperature" x="62%" y="40%" font="{light}" fontsize="6%" color="{clrLightGray}" text="{temperature}°C" />
-				<drawimage condition="{iscurrent}" name="weathericon" imagetype="icon" path="{icon}" x="57%" y="7%" align="right" width="{areaheight}*0.4" height="{areaheight}*0.4"/>
-				<drawimage condition="{ishourly}||{isdaily}" name="weathericon" imagetype="icon" path="{icon}" x="71%" y="4%" width="{areaheight}*0.5" height="{areaheight}*0.5"/>
-			</area>
- 			<area condition="{iscurrent}" x="0" y="82%" width="100%" height="32%" layer="3">           
+			 <area condition="{iscurrent}" x="0" y="73%" width="100%" height="27%" layer="3">           
 				<drawimage x="0" width="100%" height="100%" imagetype="skinpart" path="shadowsWeatherCurrent" />
 			</area>
-			<area condition="{iscurrent}" x="0" y="22%" width="94%" height="88%" layer="3">
+			
+			<area x="0" y="22%" width="94%" height="78%" layer="3">
+				<drawtext condition="{iscurrent}" x="62%" y="2%" font="{light}" fontsize="6%" color="{clrLightGray}" text="{city}" /> <drawtext condition="{iscurrent}" x="62%" y="8%" font="{light}" fontsize="4%" color="{clrLightGray}" text="{timestamp}" />
+				<drawtext condition="{iscurrent}" x="62%" y="46%" font="{light}" fontsize="6%" color="{clrLightGray}" text="{summary}" />
+				<drawtext condition="{ishourly}||{isdaily}" x="0" y="58%" align="center" font="{light}" fontsize="6%" color="{clrLightGray}" text="{summary}" />
+				<drawtext condition="{iscurrent}" name="temperature" x="62%" y="40%" font="{light}" fontsize="6%" color="{clrLightGray}" text="{temperature}°C" />
+				<drawimage condition="{iscurrent}" name="weathericon" imagetype="icon" path="{icon}" y="5%" align="right" width="{areaheight}*0.4" height="{areaheight}*0.4"/>
+				<drawimage condition="{ishourly}||{isdaily}" name="weathericon" imagetype="icon" path="{icon}" x="71%" width="{areaheight}*0.5" height="{areaheight}*0.5"/>
+			</area>
+
+			<area condition="{iscurrent}" x="0" y="21%" width="94%" height="78%" layer="3">
 				<drawtext x="2%" y="74%" font="{light}" fontsize="5%" color="{clrLightGray}" text="{tr(visibility)}: {visibility}km" />
 				<drawtext x="2%" y="79%" font="{light}" fontsize="5%" color="{clrLightGray}" text="{tr(ozone)}: {ozone}DU" />
 				<drawtext x="2%" y="84%" font="{light}" fontsize="5%" color="{clrLightGray}" text="{tr(pressure)}: {pressure}HPa" />
@@ -66,28 +68,28 @@
 				<drawtext condition="empty{precipitationtype}" x="60%" y="89%" font="{light}" fontsize="5%" color="{clrLightGray}" text="{tr(precipitationtype)}: Kein Niederschlag" />
 			</area>
 
- 			<area condition="{ishourly}||{isdaily}" x="0" y="82%" width="100%" height="32%" layer="3">           
+ 			<area condition="{ishourly}||{isdaily}" x="0" y="74%" width="100%" height="26%" layer="3">           
 				<drawimage x="0" width="100%" height="100%" imagetype="skinpart" path="shadowsWeatherDaily" />
 			</area>
-			<area condition="{ishourly}" x="0" y="85%" width="97%" height="23%" layer="4">
+			<area condition="{ishourly}" x="0" y="76%" width="97%" height="24%" layer="4">
 				<loop name="hourly" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/56" rowheight="{areaheight}" overflow="cut">
-					<drawtext condition="eq({hourly[num]}, 1)" x="2%" y="5%" font="{light}" fontsize="18%"  color="{clrLightGray}" text="{hourly[timestamp]}" />
-					<drawtext condition="eq({hourly[num]}, 8) || eq({hourly[num]}, 16) || eq({hourly[num]}, 24) || eq({hourly[num]}, 32) || eq({hourly[num]}, 40) || eq({hourly[num]}, 48)" x="4%" y="5%" font="{light}" fontsize="18%"  color="{clrLightGray}" text="{hourly[timestamp]}" />
+					<drawtext condition="eq({hourly[num]}, 1)" x="2%" y="4%" font="{light}" fontsize="16%"  color="{clrLightGray}" text="{hourly[timestamp]}" />
+					<drawtext condition="eq({hourly[num]}, 8) || eq({hourly[num]}, 16) || eq({hourly[num]}, 24) || eq({hourly[num]}, 32) || eq({hourly[num]}, 40) || eq({hourly[num]}, 48)" x="4%" y="5%" font="{light}" fontsize="16%"  color="{clrLightGray}" text="{hourly[timestamp]}" />
 					<drawimage condition="eq({hourly[num]}, 1)" imagetype="icon" path="{hourly[icon]}" x="8%" y="6%" width="{columnwidth}*3.3" height="{columnwidth}*3.3"/>
 					<drawimage condition="eq({hourly[num]}, 8) || eq({hourly[num]}, 16) || eq({hourly[num]}, 24) || eq({hourly[num]}, 32) || eq({hourly[num]}, 40) || eq({hourly[num]}, 48)" imagetype="icon" path="{hourly[icon]}" x="10%" y="6%" width="{columnwidth}*3.3" height="{columnwidth}*3.3"/>
-					<drawtext condition="eq({hourly[num]}, 1)" x="3%" y="{rowheight}*0.3" font="{light}" fontsize="17%" color="{clrLightGray}" text="{hourly[temperature]}°C" />
-					<drawtext condition="eq({hourly[num]}, 8) || eq({hourly[num]}, 16) || eq({hourly[num]}, 24) || eq({hourly[num]}, 32) || eq({hourly[num]}, 40) || eq({hourly[num]}, 48)" x="5%" y="{rowheight}*0.3" font="{light}" fontsize="17%" color="{clrLightGray}" text="{hourly[temperature]}°C" />
-					<drawtext condition="eq({hourly[num]}, 1)" x="3%" y="{columnwidth}*2.1 + {rowheight}*0.35" width="{columnwidth}*7.5"  font="{light}" fontsize="16%" color="{clrLightGray}" text="{hourly[summary]}" />
-					<drawtext condition="eq({hourly[num]}, 8) || eq({hourly[num]}, 16) || eq({hourly[num]}, 24) || eq({hourly[num]}, 32) || eq({hourly[num]}, 40) || eq({hourly[num]}, 48)" x="5%"  y="{columnwidth}*2.1 + {rowheight}*0.35" width="{columnwidth}*7.5" font="{light}" fontsize="16%" color="{clrLightGray}" text="{hourly[summary]}" />
+					<drawtext condition="eq({hourly[num]}, 1)" x="3%" y="{rowheight}*0.3" font="{light}" fontsize="16%" color="{clrLightGray}" text="{hourly[temperature]}°C" />
+					<drawtext condition="eq({hourly[num]}, 8) || eq({hourly[num]}, 16) || eq({hourly[num]}, 24) || eq({hourly[num]}, 32) || eq({hourly[num]}, 40) || eq({hourly[num]}, 48)" x="5%" y="{rowheight}*0.3" font="{light}" fontsize="16%" color="{clrLightGray}" text="{hourly[temperature]}°C" />
+					<drawtext condition="eq({hourly[num]}, 1)" x="2%" y="{columnwidth}*2.1 + {rowheight}*0.35" width="{columnwidth}*7.5"  font="{light}" fontsize="14%" color="{clrLightGray}" text="{hourly[summary]}" />
+					<drawtext condition="eq({hourly[num]}, 8) || eq({hourly[num]}, 16) || eq({hourly[num]}, 24) || eq({hourly[num]}, 32) || eq({hourly[num]}, 40) || eq({hourly[num]}, 48)" x="4%"  y="{columnwidth}*2.1 + {rowheight}*0.35" width="{columnwidth}*7.5" font="{light}" fontsize="14%" color="{clrLightGray}" text="{hourly[summary]}" />
 				</loop>
 			</area>
 
-			<area condition="{isdaily}" x="0" y="85%" width="97%" height="23%" layer="4">
+			<area condition="{isdaily}" x="0" y="76%" width="97%" height="24%" layer="4">
 				<loop name="daily" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/7" rowheight="{areaheight}" overflow="cut">
-					<drawtext x="2%" y="5%" font="{light}" fontsize="18%"  color="{clrLightGray}" text="{daily[dayname]} {daily[day]}" />
+					<drawtext x="2%" y="5%" font="{light}" fontsize="16%"  color="{clrLightGray}" text="{daily[dayname]} {daily[day]}" />
 					<drawimage imagetype="icon" path="{daily[icon]}" x="9%" y="6%" width="{columnwidth}*0.35" height="{columnwidth}*0.35"/>
-					<drawtext  x="2%" y="{rowheight}*0.3" font="{light}" fontsize="16%" color="{clrLightGray}" text="{daily[temperaturemin]}°C - {daily[temperaturemax]}°C" />
-					<drawtextbox x="2%" y="{columnwidth}*0.2625 + {rowheight}*0.25" width="{columnwidth}*0.8" maxlines="2" font="{light}" fontsize="16%" color="{clrLightGray}" text="{daily[summary]}" />
+					<drawtext  x="2%" y="{rowheight}*0.3" font="{light}" fontsize="13%" color="{clrLightGray}" text="{daily[temperaturemin]}°C - {daily[temperaturemax]}°C" />
+					<drawtextbox x="2%" y="{columnwidth}*0.2625 + {rowheight}*0.25" width="{columnwidth}*0.8" maxlines="2" font="{light}" fontsize="14%" color="{clrLightGray}" text="{daily[summary]}" />
 				</loop>
 			</area>
 		</currentelement>
